@@ -15,6 +15,7 @@ Changes
 09/09/03 r304 Updated GeoIP.dat
 
 Fixes
+09/09/08 r321 Ported fixes to Nefarious since last release to all P10 ircds
 09/09/08 r319 Added OM/CM support to all p10 ircds
 09/09/07 r312 Fixed channel part not being parsed if reason missing
 09/09/03 r307 Fixed crash in sumuser if sql query fails [closes #562]
